--- a/shixun02/src/main/webapp/res/style.css
+++ b/shixun02/src/main/webapp/res/style.css
@@ -46,7 +46,7 @@ body{
     height: 3.2rem;
     background: url(images/head-bg.png) bottom center no-repeat;
 }
-.content{
+.content{ 
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -55,28 +55,9 @@ body{
 	/* background: linear-gradient(125deg,#2c3e50,#3cab6b,#2980b9,#f0867b,#8e44ad); */
 	background: linear-gradient(125deg,#2980b9,#f0867b,#8e44ad);
 	background-size: 500%;
-	/* animation: backgroundframe 15s infinite linear; */
-}
-/* @keyframes backgroundframe {
-	0%{
-		background-position: 0% 50%;
-	}
-	50%{
-		background-position: 100% 50%;
-	}
-	100%{
-		background-position: 0% 50%;
-	} */
-	/* 0%{
-		background-position: 0% 50%;
-	}
-	50%{
-		background-position: 0% 50%;
-	}
-	100%{
-		background-position: 0% 50%;
-	} */
-/* } */
+	animation: backgroundframe 15s infinite linear;
+} 
+
 .layout{
 	position: absolute;
 	width: 25%;
@@ -179,7 +160,6 @@ body{
 	width: 100%;
 	line-height: 1.8rem;
 	height: 1.8rem;
-	padding-left: 2rem;
 	font-size: 1rem;
     text-align: center;
     color: #fff;
